--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 { 
-  "token": "MTM1OTgyOTA1ODE1MzYxMTMyNQ.Gmh_tD.B-JkCut_g8mUl2kVmvLG7S29aeuqVFczqbcTbY",
+  "token": "MTM1OTgyOTA1ODE1MzYxMTMyNQ.G3PL9Y.TatFETtEMKbwvjMnCv1hBW6rZHwxChpTdXpkVY",
   
     "guilds": [
       {
